Rewrite library to allow separate opening and closing tags

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,7 @@
         "keyword-spacing": 2,
         "comma-dangle": [2, "always-multiline"],
         "no-console": 0
-    }
+    },
+    "ignore": ["./src/lineHandlers.js"]
 }
 
