--- a/package.json
+++ b/package.json
@@ -34,19 +34,21 @@
     "nyc": "10.1.2",
     "rimraf": "2.6.1"
   },
-    "nyc": {
-      "check-coverage": true,
-        "branches": 80,
-        "functions": 80,
-        "lines": 80,
-        "statements": 80
-    },
+  "nyc": {
+    "check-coverage": true,
+    "branches": 80,
+    "functions": 80,
+    "lines": 80,
+    "statements": 80
+  },
   "babel": {
     "presets": [
       "es2015"
     ]
   },
   "config": {
-    "pre-commit": "npm run validate"
+    "ghooks": {
+      "pre-commit": "npm run validate"
+    }
   }
 }
