--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "dist/index.js",
   "scripts": {
     "prebuild": "rimraf dist",
-      "build": "npm-run-all --parallel build:*",
+    "build": "npm-run-all --parallel build:*",
     "build:main": "babel --copy-files --out-dir dist --ignore *.test.js src",
-      "build:umd": "webpack --output-filename index.umd.js",
-      "build:umd.min": "webpack --output-filename index.umd.min.js -p",
+    "build:umd": "webpack --output-filename index.umd.js",
+    "build:umd.min": "webpack --output-filename index.umd.min.js -p",
     "lint": "eslint src",
     "pretest": "rimraf tests/build",
     "test": "NODE_ENV=test babel --copy-files --out-dir tests/build tests && nyc mocha ./tests/build/specs",
@@ -35,6 +35,7 @@
     "babel-plugin-istanbul": "4.0.0",
     "babel-register": "6.24.0",
     "chai": "3.5.0",
+    "eslint": "3.17.1",
     "ghooks": "1.3.2",
     "json-loader": "0.5.4",
     "mocha": "3.2.0",
