--- a/package.json
+++ b/package.json
@@ -53,6 +53,10 @@
     "functions": 80,
     "lines": 80,
     "statements": 80,
+      "reporter": [
+          "text",
+          "lcov"
+      ],
     "instrument": false,
     "sourceMap": false,
     "require": [
